--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ section > .vertical {
   left: -9px;
   margin-left: 8px;
 }
+/* project section */
 #projects {
   padding: 40px;
   /* background-color: #f5f5f5; */
@@ -125,7 +126,7 @@ section > .vertical {
   gap: 20px;
 }
 .project-card {
-  background-color: white;
+  /* background-color: white; */
   border: 1px solid #ddd;
   padding: 20px;
   width: 300px;
