--- a/style.css
+++ b/style.css
@@ -4,9 +4,18 @@
 }
 
 body {
-  background-color: rgb(0, 0, 33);
+  background-color: #000021;
   color: white;
   font-family: "Poppins", sans-serif;
+}
+.header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: transparent;
+  z-index: 1000;
+
 }
 
 nav {
@@ -28,17 +37,15 @@ nav ul li {
 }
 
 nav ul li a {
+  font-size: 18px;
   color: white;
   text-decoration: none;
+  font-weight: 500;
+  margin-left: 35px;
 }
-nav ul li ul li {
-  display: block;
-  margin: 0;
-}
-
 nav ul li a:hover {
   color: rgb(130, 161, 240);
-  font-size: 1.01rem;
+  /* font-size: 1.01rem; */
 }
 
 main hr {
@@ -69,9 +76,12 @@ main hr {
 
 .rightsection img {
   width: 80%;
-  opacity: 1;
-  border-radius: 25px;
-  transition: opacity 1s ease-in-out;
+  /* border: 3px solid #0ef;
+  border-radius: 50%;
+  background: #0ef;
+  box-shadow: 0 10px 90px #0ef;
+  transition: transform 0.3s ease; */
+
 }
 
 #element {
@@ -147,34 +157,38 @@ section > .vertical {
 }
 /* Contect section */
 #contact {
-  background-color: #c7c5df;
+  background-color: #040440;
   padding: 40px 20px;
   text-align: center;
 }
 
 #contact h2 {
-  color: #333;
+  color: #ffffff;
   margin-bottom: 20px;
   font-size: 28px;
 }
 
 .contact-info {
-  max-width: 600px;
-  margin: 0 auto;
-  font-size: 18px;
-  line-height: 1.6;
-  color: #444;
-}
-
-.contact-info p {
-  margin: 10px 0;
+  color: #ffffff;
 }
 
 .contact-info a {
-  color: #007bff;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: 2px solid #0ef;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #0ef;
   text-decoration: none;
+  margin: 30px 15px 30px 0;
 }
 
 .contact-info a:hover {
-  text-decoration: underline;
+  background: #0ef;
+  color: #081b29;
+  box-shadow: 0 0 20px #0ef;
 }
