--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ section > .vertical {
   }
 
   .left {
-    font-size: 1.8rem;
+    font-size: 1.1rem;
     text-align: center;
     margin-bottom: 10px;
   }
@@ -254,7 +254,7 @@ section > .vertical {
   }
 
   body {
-    padding-top: 100px;
+    padding-top: 90%;
   }
 }
 
